--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <a href="index.html" class="font-semibold hover:underline">Beranda</a>
                 <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
+                <a href="js/absen.php" class="font-semibold hover:underline">Generator Absen</a>
             </nav>
         </div>
         <div id="mobile-menu" class="md:hidden hidden">
@@ -65,6 +66,7 @@
                 <a href="index.html" class="hover:underline">Beranda</a>
                 <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
                 <a href="baru.html" class="hover:underline">Pembimbing Baru</a>
+                <a href="js/absen.php" class="hover:underline">Generator Absen</a>
             </nav>
         </div>
     </header>
