--- a/baru.html
+++ b/baru.html
@@ -127,6 +127,7 @@
                 <thead>
                     <tr>
                         <th class="border px-4 py-2">No.</th>
+                        <th class="border px-4 py-2">No. Infaq</th>
                         <th class="border px-4 py-2">NAMA</th>
                     </tr>
                 </thead>
@@ -153,6 +154,7 @@
             const tr = document.createElement("tr");
             tr.innerHTML = `
                 <td class="border px-4 py-2">${index + 1}</td> <!-- Nomor otomatis dimulai dari 1 -->
+                <td class="border px-4 py-2">${row.NOINFAQ}</td>
                 <td class="border px-4 py-2">${row.NAMA}</td>
             `;
             tbody.appendChild(tr);
