--- a/baru.html
+++ b/baru.html
@@ -5,81 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filter Table by Pembimbing Baru</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            background-color: #f8f8f8; /* Warna latar belakang yang lembut */
-        }
-
-        header, footer {
-            background-color: #6b0f0f; /* Warna merah maroon */
-            color: #ffffff; /* Warna teks putih untuk kontras */
-            padding: 1rem; /* Padding untuk header dan footer */
-            text-align: center; /* Rata tengah teks */
-        }
-
-        .table-container {
-            overflow-x: auto; /* Membuat tabel dapat digulir secara horizontal */
-            margin-top: 20px;
-            background-color: white; /* Set latar belakang menjadi putih */
-            padding: 20px; /* Tambahkan padding untuk jarak dengan tabel */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Bayangan tabel untuk efek 3D */
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: white; /* Set latar belakang tabel menjadi putih */
-        }
-
-        th, td {
-            border: 1px solid #e2e8f0;
-            padding: 0.5rem; /* Padding lebih kecil untuk kompak */
-            text-align: left;
-            font-size: 0.875rem; /* Ukuran font lebih kecil */
-        }
-
-        th {
-            background-color: #6b0f0f; /* Warna header tabel menjadi merah maroon */
-            color: #ffffff; /* Warna teks putih untuk kontras */
-            font-weight: 600;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f1f1f1; /* Warna latar belakang baris genap untuk meningkatkan keterbacaan */
-        }
-
-        tr:hover {
-            background-color: #e2e8f0; /* Efek hover pada baris */
-        }
-
-        select {
-            border-radius: 0.375rem; /* Rounded corners */
-            border: 1px solid #e2e8f0; /* Border untuk dropdown */
-            padding: 0.5rem; /* Padding untuk dropdown */
-            margin-top: 0.5rem; /* Margin untuk spasi atas */
-        }
-
-        button {
-            border-radius: 0.375rem; /* Rounded corners */
-            background-color: #3b82f6; /* Warna tombol biru */
-            color: white; /* Warna teks tombol */
-            font-weight: bold; /* Berat font untuk tombol */
-            padding: 0.5rem 1rem; /* Padding tombol */
-        }
-
-        button:hover {
-            background-color: #2563eb; /* Warna tombol saat hover */
-        }
-
-        .logo {
-            width: 50px; /* Atur ukuran logo sesuai kebutuhan */
-            height: auto; /* Jaga agar proporsional */
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -145,103 +71,6 @@
     </footer>
 
     <script src="js/script2.js"></script>
-    <script>
-    function populateTable(data) {
-        const tbody = document.querySelector("#santriTable tbody");
-        tbody.innerHTML = "";
-
-        data.forEach((row, index) => {
-            const tr = document.createElement("tr");
-            tr.innerHTML = `
-                <td class="border px-4 py-2">${index + 1}</td> <!-- Nomor otomatis dimulai dari 1 -->
-                <td class="border px-4 py-2">${row.NOINFAQ}</td>
-                <td class="border px-4 py-2">${row.NAMA}</td>
-            `;
-            tbody.appendChild(tr);
-        });
-    }
-
-    function populateDropdowns() {
-        // Dropdown untuk "Pembimbing Baru"
-        const pembimbingSet = new Set(data.map(item => item["PEMBIMBING BARU"]));
-        const pembimbingDropdown = document.getElementById("pembimbingFilter");
-
-        pembimbingSet.forEach(pembimbing => {
-            const option = document.createElement("option");
-            option.value = pembimbing;
-            option.textContent = pembimbing;
-            pembimbingDropdown.appendChild(option);
-        });
-
-        // Populasi awal dropdown status
-        updateStatusDropdown();
-    }
-
-    function updateStatusDropdown() {
-        const pembimbingValue = document.getElementById("pembimbingFilter").value;
-        const statusDropdown = document.getElementById("statusFilter");
-
-        // Hapus semua opsi lama di dropdown status
-        statusDropdown.innerHTML = '<option value="All">All</option>';
-
-        // Ambil semua status yang relevan berdasarkan pembimbing terpilih
-        let relevantStatuses;
-        if (pembimbingValue === "All") {
-            relevantStatuses = new Set(data.map(item => item.STATUS));
-        } else {
-            relevantStatuses = new Set(data.filter(item => item["PEMBIMBING BARU"] === pembimbingValue).map(item => item.STATUS));
-        }
-
-        // Tambahkan opsi status ke dropdown
-        relevantStatuses.forEach(status => {
-            const option = document.createElement("option");
-            option.value = status;
-            option.textContent = status;
-            statusDropdown.appendChild(option);
-        });
-    }
-
-    // Fungsi untuk mengurutkan data berdasarkan kolom STATUS
-    function sortByStatus(data) {
-        return data.sort((a, b) => {
-            if (a.STATUS < b.STATUS) {
-                return -1;
-            }
-            if (a.STATUS > b.STATUS) {
-                return 1;
-            }
-            return 0;
-        });
-    }
-
-    function filterTable() {
-        const pembimbingValue = document.getElementById("pembimbingFilter").value;
-        const statusValue = document.getElementById("statusFilter").value;
-
-        let filteredData = data;
-
-        // Filter berdasarkan Pembimbing Baru
-        if (pembimbingValue !== "All") {
-            filteredData = filteredData.filter(row => row["PEMBIMBING BARU"] === pembimbingValue);
-        }
-
-        // Filter berdasarkan Status
-        if (statusValue !== "All") {
-            filteredData = filteredData.filter(row => row.STATUS === statusValue);
-        }
-
-        // Urutkan data berdasarkan kolom STATUS
-        const sortedData = sortByStatus(filteredData);
-
-        populateTable(sortedData);
-    }
-
-    // Pastikan fungsi ini berjalan hanya setelah halaman selesai dimuat
-    window.onload = function() {
-        populateTable(sortByStatus(data));
-        populateDropdowns();
-    };
-    </script>
+    <script src="js/scriptbaru.js"></script>
 </body>
 </html>
-
