--- a/awal.html
+++ b/awal.html
@@ -17,10 +17,11 @@
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
                 </button>
             </div>
-            <nav class="hidden md:flex space-x-4">
+           <nav class="hidden md:flex space-x-4">
                 <a href="index.html" class="font-semibold hover:underline">Beranda</a>
                 <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
+                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
             </nav>
         </div>
         <div id="mobile-menu" class="md:hidden hidden">
@@ -28,6 +29,7 @@
                 <a href="index.html" class="font-semibold hover:underline">Beranda</a>
                 <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
+                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
             </nav>
         </div>
     </header>
