--- a/baru.html
+++ b/baru.html
@@ -20,10 +20,11 @@
                     </svg>
                 </button>
             </div>
-            <nav class="hidden md:flex space-x-4">
+           <nav class="hidden md:flex space-x-4">
                 <a href="index.html" class="font-semibold hover:underline">Beranda</a>
                 <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
+                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
             </nav>
         </div>
         <div id="mobile-menu" class="md:hidden hidden">
@@ -31,6 +32,7 @@
                 <a href="index.html" class="font-semibold hover:underline">Beranda</a>
                 <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
+                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
             </nav>
         </div>
     </header>
