--- a/abseninfaq.html
+++ b/abseninfaq.html
@@ -366,6 +366,16 @@
     // Simpan PDF
     doc.save('filtered_santri_absen_table.pdf');
   }
+
+  document.getElementById('menu-toggle').addEventListener('click', function() {
+  const mobileMenu = document.getElementById('mobile-menu');
+  if (mobileMenu.classList.contains('hidden')) {
+    mobileMenu.classList.remove('hidden');  // Tampilkan menu jika disembunyikan
+  } else {
+    mobileMenu.classList.add('hidden');     // Sembunyikan menu jika ditampilkan
+  }
+});
+
 </script>
 
 </body></html>
