--- a/awal.html
+++ b/awal.html
@@ -23,6 +23,7 @@
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
                 <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
                <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+               <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
             </nav>
         </div>
         <div id="mobile-menu" class="md:hidden hidden">
@@ -32,6 +33,7 @@
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
                 <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
                 <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+                <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
             </nav>
         </div>
     </header>
