--- a/baru.html
+++ b/baru.html
@@ -26,6 +26,7 @@
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
                 <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
                <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+               <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
             </nav>
         </div>
         <div id="mobile-menu" class="md:hidden hidden">
@@ -35,6 +36,7 @@
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
                 <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
                 <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+                <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
             </nav>
         </div>
     </header>
