--- a/infaq.html
+++ b/infaq.html
@@ -20,12 +20,14 @@
                     </svg>
                 </button>
             </div>
+
            <nav class="hidden md:flex space-x-4">
                 <a href="index.html" class="font-semibold hover:underline">Beranda</a>
                 <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
                 <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
                <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+               <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
             </nav>
         </div>
         <div id="mobile-menu" class="md:hidden hidden">
@@ -35,6 +37,7 @@
                 <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
                 <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
                 <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+                <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
             </nav>
         </div>
     </header>
