--- a/abseninfaq.html
+++ b/abseninfaq.html
@@ -13,22 +13,25 @@
                 </svg>
             </button>
         </div>
-        <nav class="hidden md:flex space-x-4">
-            <a href="index.html" class="font-semibold hover:underline">Beranda</a>
-            <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
-            <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
-            <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
-           <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
-        </nav>
-    </div>
-    <div id="mobile-menu" class="md:hidden hidden">
-        <nav class="flex flex-col items-center space-y-2 mt-4">
-            <a href="index.html" class="font-semibold hover:underline">Beranda</a>
-            <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
-            <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
-            <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
-            <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
-        </nav>
+
+           <nav class="hidden md:flex space-x-4">
+                <a href="index.html" class="font-semibold hover:underline">Beranda</a>
+                <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
+                <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
+                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
+               <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+               <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
+            </nav>
+        </div>
+        <div id="mobile-menu" class="md:hidden hidden">
+            <nav class="flex flex-col items-center space-y-2 mt-4">
+                <a href="index.html" class="font-semibold hover:underline">Beranda</a>
+                <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
+                <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
+                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
+                <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+                <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
+            </nav>
     </div>
 </header>
 
