--- a/digital.html
+++ b/digital.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html><head><title>Sistem Absensi Digital</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
