--- a/digital.html
+++ b/digital.html
@@ -642,7 +642,7 @@
     function updateStatusFilter() {
       const pembimbingValue = document.getElementById('pembimbingFilter').value;
       const statusFilter = document.getElementById('kelasFilter');
-      statusFilter.innerHTML = '<option value="">Pilih Status</option>';
+      statusFilter.innerHTML = '<option value="">Pilih Kelas</option>';
 
       if (pembimbingValue) {
         const statusOptions = pembimbingToStatus[pembimbingValue];
