--- a/digital.html
+++ b/digital.html
@@ -549,8 +549,8 @@
     </div>
 
     <script>
-        const supabaseUrl = 'https://krmwxfqptemwxhckprua.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtybXd4ZnFwdGVtd3hoY2twcnVhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjkyNTg4MjksImV4cCI6MjA0NDgzNDgyOX0.LsxU4yDTy3nKl6QzqwuTSyDkqBdLGQUS3lR3VCyWxW0';
+        const supabaseUrl = 'https://lrkechznknwqnxckyfcg.supabase.co';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxya2VjaHpua253cW54Y2t5ZmNnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjkxMjgzODEsImV4cCI6MjA0NDcwNDM4MX0.Tj8p1u3_DGQnqhPkS6AJGs5BwOSeebdvsknX2qHzwdQ';
         let supabaseClient;
 
         let currentSantri = []; // Menyimpan data santri saat ini
