--- a/index.html
+++ b/index.html
@@ -10,37 +10,43 @@
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
-            background-color: #f8f8f8; /* Warna latar belakang yang lembut */
-        }
-        header, footer {
-            background-color: #6b0f0f; /* Warna merah maroon */
-            color: #ffffff; /* Warna teks putih untuk kontras */
-            padding: 1rem; /* Padding untuk header dan footer */
-            text-align: center; /* Rata tengah teks */
-        }
-        footer {
-            background-color: #6b0f0f; /* Warna merah maroon untuk footer */
+            background-color: #f8f8f8;
+            max-width: 100%;
+            margin: 0 auto;
+            padding: 20px;
+            box-sizing: border-box;
         }
         a {
             transition: color 0.3s;
         }
         a:hover {
-            color: #e2e8f0; /* Warna saat hover pada tautan */
+            color: #e2e8f0;
         }
         .card {
-            background-color: #f7b2b2; /* Warna latar belakang kartu (warna merah muda) */
-            padding: 1.5rem; /* Padding untuk kartu */
-            border-radius: 0.375rem; /* Rounded corners */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Bayangan untuk efek 3D */
-            transition: box-shadow 0.3s; /* Efek transisi bayangan */
-            text-align: center; /* Rata tengah teks dalam kartu */
+            background-color: #f7b2b2;
+            padding: 1.5rem;
+            border-radius: 0.375rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s;
+            text-align: center;
         }
         .card:hover {
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Bayangan lebih gelap saat hover */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        header, footer {
+            background-color: #6b0f0f;
+            color: #ffffff;
+            padding: 1rem;
+            text-align: center;
         }
         .logo {
-            width: 50px; /* Atur ukuran logo sesuai kebutuhan */
-            height: auto; /* Jaga agar proporsional */
+            width: 50px;
+            height: auto;
+        }
+        @media screen and (min-width: 600px) {
+            body {
+                max-width: 800px;
+            }
         }
     </style>
 </head>
@@ -50,25 +56,14 @@
             <img src="img/logo.jpg" alt="Logo Rumah Tahfidz Saijaan" class="logo w-12 h-auto mr-1 max-w-xs" />
             <h1 class="text-2xl md:text-3xl font-bold flex-grow text-center md:text-left">Rumah Tahfidz Saijaan</h1>
             <div class="md:hidden">
-                <button id="menu-toggle" class="text-white focus:outline-none" onclick="toggleMenu()">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+                <button id="menu-toggle" class="text-white focus:outline-none">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                    </svg>
                 </button>
             </div>
-           
-           <nav class="hidden md:flex space-x-4">
-                <a href="index.html" class="font-semibold hover:underline">Beranda</a>
-                <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
-                <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
-                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
-               <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
-               <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
-            </nav>
-        </div>
-        <div id="mobile-menu" class="md:hidden hidden">
-            <nav class="flex flex-col items-center space-y-2 mt-4">
-                <a href="index.html" class="font-semibold hover:underline">Beranda</a>
-                <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
-                <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
+            <nav class="hidden md:flex space-x-4">
+                <a href="baru.html" class="font-semibold hover:underline">Kelas Aktif</a>
                 <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
                 <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
                 <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
@@ -76,40 +71,47 @@
         </div>
         <div id="mobile-menu" class="md:hidden hidden">
             <nav class="flex flex-col items-center space-y-2 mt-4">
-                <a href="index.html" class="hover:underline">Beranda</a>
-                <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
-                <a href="baru.html" class="hover:underline">Pembimbing Baru</a>
+                <a href="baru.html" class="font-semibold hover:underline">Kelas Aktif</a>
+                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
+                <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+                <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
             </nav>
         </div>
     </header>
-     
+
     <main class="container mx-auto px-4 py-8">
-        <h2 class="text-2xl font-semibold mb-6">Selamat Datang di Rumah Tahfidz Saijaan</h2>
-        <p class="mb-4">Silakan pilih halaman yang ingin Anda kunjungi:</p>
+        <h2 class="text-2xl font-semibold mb-6 text-center">Selamat Datang di Rumah Tahfidz Saijaan</h2>
+        <p class="mb-4 text-center">Silakan pilih halaman yang ingin Anda kunjungi:</p>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <a href="awal.html" class="card">
-                <h3 class="text-xl font-semibold mb-2">Daftar Santri Pembimbing Awal</h3>
-                <p>Lihat distribusi santri berdasarkan pembimbing awal mereka.</p>
+            <a href="digital.html" class="card">
+                <h3 class="text-xl font-semibold mb-2">ABSENSI DIGITAL</h3>
+                <p>efisien, akurat, cepat, praktis, hemat waktu, mudah diakses</p>
             </a>
             <a href="baru.html" class="card">
-                <h3 class="text-xl font-semibold mb-2">Daftar Santri Pembimbing Baru</h3>
-                <p>Lihat distribusi santri berdasarkan pembimbing baru mereka.</p>
+                <h3 class="text-xl font-semibold mb-2">KELAS AKTIF</h3>
+                <p>Lihat kelas aktif santri periode September s/d Desember 2024</p>
             </a>
         </div>
     </main>
 
-    <footer class="bg-red-800 text-white mt-8">
+    <footer>
         <div class="container mx-auto px-4 py-6">
-            <p>&copy; 2024 Rumah Tahfidz Saijaan. Hak Cipta Dilindungi.</p>
+            <p class="text-center">&copy; 2024 Rumah Tahfidz Saijaan. Hak Cipta Dilindungi.</p>
         </div>
     </footer>
 
     <script>
-        // Fungsi untuk mengubah tampilan menu pada perangkat mobile
-        function toggleMenu() {
-            const mobileMenu = document.getElementById('mobile-menu');
-            mobileMenu.classList.toggle('hidden'); // Menyembunyikan atau menampilkan menu
-        }
+        document.addEventListener('DOMContentLoaded', function() {
+            const menuToggle = document.getElementById('menu-toggle');
+            if (menuToggle) {
+                menuToggle.addEventListener('click', function() {
+                    const mobileMenu = document.getElementById('mobile-menu');
+                    if (mobileMenu) {
+                        mobileMenu.classList.toggle('hidden');
+                    }
+                });
+            }
+        });
     </script>
 </body>
 </html>
