--- a/infaq.html
+++ b/infaq.html
@@ -3,12 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filter Table by Pembimbing Baru</title>
+    <title>Cari Nomor Infaq Santri - Rumah Tahfidz Saijaan</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            background-color: #f8f8f8;
+            max-width: 100%;
+            margin: 0 auto;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        a {
+            transition: color 0.3s;
+        }
+        a:hover {
+            color: #e2e8f0;
+        }
+        header, footer {
+            background-color: #6b0f0f;
+            color: #ffffff;
+            padding: 1rem;
+            text-align: center;
+        }
+        .logo {
+            width: 50px;
+            height: auto;
+        }
+        table {
+            width: 100%;
+            border-collapse: separate;
+            border-spacing: 0;
+            margin-top: 20px;
+            background-color: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        th, td {
+            padding: 12px 15px;
+            text-align: left;
+            border-bottom: 1px solid #e2e8f0;
+        }
+        th {
+            background-color: #6b0f0f;
+            color: white;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+        tr:last-child td {
+            border-bottom: none;
+        }
+        tr:nth-child(even) {
+            background-color: #f8f8f8;
+        }
+        @media screen and (min-width: 600px) {
+            body {
+                max-width: 800px;
+            }
+        }
+    </style>
 </head>
-<body>
-
+<body class="bg-gray-100">
     <header>
         <div class="container mx-auto px-4 py-6 flex items-center">
             <img src="img/logo.jpg" alt="Logo Rumah Tahfidz Saijaan" class="logo w-12 h-auto mr-1 max-w-xs" />
@@ -20,22 +78,17 @@
                     </svg>
                 </button>
             </div>
-
-           <nav class="hidden md:flex space-x-4">
+            <nav class="hidden md:flex space-x-4">
                 <a href="index.html" class="font-semibold hover:underline">Beranda</a>
-                <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
-                <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
-                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
-               <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
-               <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
+                <a href="baru.html" class="font-semibold hover:underline">Kelas Aktif</a>
+                <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
+                <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
             </nav>
         </div>
         <div id="mobile-menu" class="md:hidden hidden">
             <nav class="flex flex-col items-center space-y-2 mt-4">
                 <a href="index.html" class="font-semibold hover:underline">Beranda</a>
-                <a href="awal.html" class="font-semibold hover:underline">Pembimbing Awal</a>
-                <a href="baru.html" class="font-semibold hover:underline">Pembimbing Baru</a>
-                <a href="infaq.html" class="font-semibold hover:underline">Cari No. Infaq</a>
+                <a href="baru.html" class="font-semibold hover:underline">Kelas Aktif</a>
                 <a href="abseninfaq.html" class="font-semibold hover:underline">Generator Absen</a>
                 <a href="digital.html" class="font-semibold hover:underline">Absen Digital</a>
             </nav>
@@ -43,13 +96,12 @@
     </header>
 
     <main class="container mx-auto px-4 py-8">
-    <div class="container mx-auto px-4 py-8">
         <h1 class="text-2xl font-semibold mb-6 text-center"><strong>CARI NOMOR INFAQ SANTRI</strong></h1>
         <div class="flex justify-center mb-8">
-            <input type="text" id="search-input" class="form-control w-1/2" placeholder="Cari nama santri...">
+            <input type="text" id="search-input" class="form-control w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-600" placeholder="Cari nama santri...">
         </div>
         
-        <table id="santri-table" class="table table-striped hidden">
+        <table id="santri-table" class="table-auto w-full hidden">
             <thead>
                 <tr>
                     <th>Nomor Infaq</th>
@@ -60,7 +112,7 @@
                 <!-- Data siswa akan ditambahkan di sini -->
             </tbody>
         </table>  
-    </div></main>
+    </main>
 
     <footer>
         <div class="container mx-auto px-4 py-6">
@@ -68,14 +120,30 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script2.js"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script>
+        const supabaseUrl = 'https://lrkechznknwqnxckyfcg.supabase.co';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxya2VjaHpua253cW54Y2t5ZmNnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjkxMjgzODEsImV4cCI6MjA0NDcwNDM4MX0.Tj8p1u3_DGQnqhPkS6AJGs5BwOSeebdvsknX2qHzwdQ';
+        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+
         const searchInput = document.getElementById('search-input');
         const tableBody = document.getElementById('table-body');
         const santriTable = document.getElementById('santri-table');
 
-        function displayData(santri) {
+        async function fetchData(searchTerm = '') {
+            let { data, error } = await supabaseClient
+                .from('santri')
+                .select('NAMA, NOINFAQ')
+                .ilike('NAMA', `%${searchTerm}%`);
+
+            if (error) {
+                console.error('Error:', error);
+                return [];
+            }
+            return data;
+        }
+
+        async function displayData(santri) {
             tableBody.innerHTML = '';
 
             santri.forEach(item => {
@@ -94,11 +162,9 @@
             }
         }
 
-        function filterData() {
+        async function filterData() {
             const searchTerm = searchInput.value.toLowerCase();
-            const filteredData = data.filter(santri =>
-                santri.NAMA.toLowerCase().includes(searchTerm)
-            );
+            const filteredData = await fetchData(searchTerm);
 
             if (searchTerm === '') {
                 santriTable.classList.add('hidden');
@@ -108,20 +174,19 @@
         }
 
         searchInput.addEventListener('input', filterData);
-
-        // Menambahkan event listener untuk toggle menu mobile
-        document.getElementById('menu-toggle').addEventListener('click', function() {
-            console.log('Menu toggle clicked!'); // Untuk debugging
-            const mobileMenu = document.getElementById('mobile-menu');
-            mobileMenu.classList.toggle('hidden');
-        });
-
-        //hamburger menu
-// Fungsi untuk mengubah tampilan menu pada perangkat mobile
-document.getElementById('menu-toggle').onclick = function() {
-    const mobileMenu = document.getElementById('mobile-menu');
-}
     </script>
-
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const menuToggle = document.getElementById('menu-toggle');
+            if (menuToggle) {
+                menuToggle.addEventListener('click', function() {
+                    const mobileMenu = document.getElementById('mobile-menu');
+                    if (mobileMenu) {
+                        mobileMenu.classList.toggle('hidden');
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 </html>
