--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </header>
 
     <main class="container mx-auto px-4 py-8">
-        <h2 class="text-2xl font-semibold mb-6 text-center">Selamat Datang di Sistem Administrasi Santri</h2>
+        <h2 class="text-2xl font-semibold mb-6 text-center">Sistem Administrasi Santri</h2>
         
         <!-- Tambahkan div untuk menampilkan statistik -->
         <div id="statistik" class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
