--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
             color: #e2e8f0;
         }
         .card {
-            background-color: #672cfb;
+            background-color: #e93f3f;
             padding: 1.5rem;
             border-radius: 0.375rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(81, 15, 15, 0.1);
             transition: box-shadow 0.3s;
             text-align: center;
+            color: #ffffff; /* Menambahkan warna putih untuk teks */
         }
         .card:hover {
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -123,7 +124,7 @@
             </div>
         </div>
         
-        <p class="mb-4 text-center">Silakan pilih halaman yang ingin Anda kunjungi:</p>
+        <p class="mb-4 text-center"><strong>MENU UTAMA</strong></p>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <a href="digital.html" class="card">
                 <h3 class="text-xl font-semibold mb-2">ABSENSI DIGITAL</h3>
